# dbg_compare

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
docker/bifrost/: Dockerfile
docker/cuttlefish/: Dockerfile
docker/ggcat/: Dockerfile
scripts/: chunk_bams.py  compare_profile_results.py  convert_ggcat_fasta_to_gfa.py  download_gs_uris.py  get_random_intervals.py  merge_bams_by_interval.py  profile.py
scripts/module/: Edge.py  GsUri.py
src/executable/: query_gfa_with_bifrost.cpp
src/test/: test_bifrost.cpp
